--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "async-validator": "^4.2.5",
     "lodash-es": "^4.17.21",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
