--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@popperjs/core": "^2.11.8",
     "async-validator": "^4.2.5",
     "lodash-es": "^4.17.21",
     "vue": "^3.5.13",
@@ -30,6 +31,7 @@
     "typescript-eslint": "^8.28.0",
     "vite": "^6.2.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vitepress": "^1.6.3",
     "vue-tsc": "^2.2.4"
   }
 }
