--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:build": "vitepress build docs --debug",
+    "docs:preview": "vitepress preview docs",
+    "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -37,7 +38,7 @@
     "sass-embedded": "^1.86.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.28.0",
-    "vite": "^6.2.0",
+    "vite": "^6.3.2",
     "vite-plugin-eslint": "^1.8.1",
     "vitepress": "^1.6.3",
     "vue-tsc": "^2.2.4"
